# vividkit-app

./: .gitignore  .prettierrc  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.claude/: .gitignore
.claude/commands/: submit-to-mentor.md
.github/workflows/: ci.yml
docs/: code-standards.md  codebase-summary.md  design-system.md  development-roadmap.md  mentor-usage-guide.md  mvp-prd-brainstorm.md  native-devtools-mcp-setup.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
plans/260222-1340-vividkit-project-setup/: phase-01-tauri-react-init.md  phase-02-project-structure.md  phase-03-rust-backend-scaffold.md  phase-04-supervisor-setup.md  phase-05-claude-md-and-skills.md  plan.md
plans/260222-2244-screen-implementation/: phase-01-routing-layout.md  phase-02-onboarding.md  phase-03-dashboard.md  plan.md  (+9 more)
src/: App.css  App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_app_settings.sql
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: ai.rs  brainstorm.rs  ccs.rs  ccs_profile.rs  dashboard.rs  db.rs  deck.rs  fs.rs  git.rs  mod.rs  plan.rs  project.rs  settings.rs  subagent.rs  task.rs  worktree.rs  worktree_cmd.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: brainstorm.rs  ccs_account.rs  config.rs  cook_session.rs  deck.rs  enums.rs  key_insight.rs  mod.rs  plan.rs  project.rs  settings.rs  subagent.rs  task.rs  worktree.rs
(+240 files in other folders)
